--- a/extension.toml
+++ b/extension.toml
@@ -9,3 +9,7 @@ repository = "https://github.com/lume-lang/extension-zed"
 [grammars.lume]
 repository = "https://github.com/lume-lang/tree-sitter-lume"
 rev = "cb029629232d2f683d57122e2405834d8f6b0d6a"
+
+[grammars.arc]
+repository = "https://github.com/lume-lang/tree-sitter-arc"
+rev = "7627f737d9fd969c762005b88a0e21d1cf3c9f8f"
