--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "lume"
-version = "0.0.1"
+name = "zed-extension-lume"
+version = "0.0.2"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-zed_extension_api = "=0.5.0"
+zed_extension_api = "0.1.0"
